After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685095 - Cannot open document files: "Error invoking Gd.pdf_loader_load_uri_finish: Cannot find "unoconv""
Cannot open document files: "Error invoking Gd.pdf_loader_load_uri_finish: Ca...
Status: RESOLVED FIXED
Product: gnome-documents
Classification: Core
Component: general
unspecified
Other Linux
: Normal major
: ---
Assigned To: GNOME documents maintainer(s)
GNOME documents maintainer(s)
: 671046 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-09-29 10:48 UTC by Greg
Modified: 2013-05-28 09:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Greg 2012-09-29 10:48:52 UTC
Documents should be able to use abiword as an alternative to LibreOffice writer for opening document files.
Comment 1 André Klapper 2012-09-29 16:37:41 UTC
Which exact version is this about?
What are exact steps to reproduce this problem?
Comment 2 Greg 2012-09-29 21:11:46 UTC
I have gnome-documents 0.4.2 installed and when i try to load a .docx file in it i am told to check my libreoffice installation.
I dont have libreoffice installed, just abiword.
Comment 3 André Klapper 2012-09-29 23:32:29 UTC
What is the exact error message?
Comment 4 Greg 2012-09-30 07:04:28 UTC
There is an icon like this one: https://upload.wikimedia.org/wikipedia/commons/e/ee/Zeichen_267.svg

The text that reads:
"Unable to load $doc for preview
Error invoking Gd.pdf_loader_load_uri_finish: Cannot find "unoconv", please check your LibreOffice installation."
Comment 5 André Klapper 2012-09-30 11:13:02 UTC
*** Bug 671046 has been marked as a duplicate of this bug. ***
Comment 6 André Klapper 2012-09-30 11:18:45 UTC
(In reply to comment #0)
> Documents should be able to use abiword as an alternative to LibreOffice writer
> for opening document files.

This is possible and has nothing to do with the error message.
For changing default applications choose a file, right-click, and go to
Properties > Open With > Set as Default.
https://wiki.archlinux.org/index.php/Default_Applications also lists a lot of information.
Comment 7 Cosimo Cecchi 2012-12-19 12:02:44 UTC
I now pushed a patch to git to automatically prompt through PackageKit to install unoconv in case it's not found, as we depend on that in order to be able to preview office-like documents. I don't know what supporting Abiword would imply, or if it gives us the same ability to convert office documents for preview like LibreOffice does, but I don't think it's worth it to make this feature pluggable really.
Comment 8 Reinout van Schouwen 2013-05-28 09:09:36 UTC
(In reply to comment #7)

> able to preview office-like documents. I don't know what supporting Abiword
> would imply, or if it gives us the same ability to convert office documents for
> preview like LibreOffice does, but I don't think it's worth it to make this
> feature pluggable really.

Abiword has a simple command line option '--to=FORMAT' which allows you to convert a lot of document types (notably abw, which LibreOffice doesn't support AFAIK) to for instance PDF.

Abiword is software that has been developed in the Gnome ecosystem. That we would depend exclusively on LO for document preview is... a bit unfortunate, I would say.