pdf-loader: try to install unoconv trough PackageKit if missing

When trying to open a LibreOffice document, and unoconv is not
installed, instead of failing immediately, use PackageKit and try
installing it first.

https://bugzilla.gnome.org/show_bug.cgi?id=685095